# StatData

./: PHASE4_ANALYSE.md  PHASE4_ZUSAMMENFASSUNG.md  PROJEKTANALYSE.md  README.md  TECHNISCHE_ANALYSE_2024.md  TECHNISCHE_SCHULDEN.md  TECHNISCHE_STAND_ANALYSE.md  ZUSAETZLICHE_QUELLEN_ZUSAMMENFASSUNG.md  mkdocs.yml  pyproject.toml  test.parquet
.github/workflows/: deploy-docs.yml
docs/: adapters.md  api.md  architecture.md  cli.md  configuration.md  getting-started.md  index.md  performance.md  roadmap.md  search.md
docs/tutorials/: advanced-features.md  getting-started-tutorial.md
src/socdata/: __init__.py  api.py  cli.py  server.py
src/socdata/core/: cache.py  cloud_storage.py  config.py  download.py  exceptions.py  i18n.py  logging.py  models.py  parsers.py  registry.py  search_index.py  storage.py  types.py  validation.py
src/socdata/sources/: allbus.py  base.py  cses.py  ess.py  eurostat.py  evs.py  gss.py  icpsr.py  issp.py  manual.py  opendata.py  soep.py
tests/: test_api.py  test_cache.py  test_cli.py  test_config.py  test_download.py  test_eurostat_sdmx.py  test_gss.py  test_i18n.py  test_icpsr.py  test_manual_wvs.py  test_parsers.py  test_registry.py  test_search_index.py  test_server.py  test_soep.py  test_validation.py
